--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<html>
+  <head><title>Your Tru Android App<title>
+    <style>
+      button#join {
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+               }
+    </style>
+    <body>
+       <a href=""><button id="join">Join</button>
+       <a href=""><button id="join">Join</button>
