--- a/index.html
+++ b/index.html
@@ -8,5 +8,4 @@
                }
     </style>
     <body>
-       <a href=""><button id="join">Join</button>
-       <a href=""><button id="join">Join</button>
+      <a href="/app-debug.apk">Click me!</a>
