--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
+<!doctype html>
 <html>
-  <head><title>Your Tru Android App<title>
-    <style>
-      button#join {
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-               }
-    </style>
+    <head>
+     <title>Your Tru</title>
+    </head>
     <body>
-      <a href="/app-debug.apk">Click me!</a>
+        <a href="/app-debug.apk" style="text-decoration: none">Click Me!</a>
+    </body>
+</html>
