--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </tr>
             <tr>
                 <td align="left" width="400">
-                    <div><marquee>FAKE</marquee></div>
+                    <div><marquee>!!FAKE!! DO NOT PUT YOUR INFORMATION HERE !!FAKE!!</marquee></div>
                     <div class="content">
                         <table border="0" cellspacing="10" cellpadding="0">
                             <tr>
