--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <tr>
                 <td width="180" background="background_web41.jpg" align="middle" style="padding-bottom: 4px;" >
 
-                    <h1>Login</h1>
+                    <h1>!FAKE!<marquee>Login<marquee>!FAKE!</h1>
                 </td>
 
                 <td height="53" align="right" style="padding-bottom: 4px; padding-right: 20px;" background="background_web41.jpg"></td>
@@ -98,7 +98,6 @@
             </tr>
             <tr>
                 <td align="left" width="400">
-                    <div><marquee>!!FAKE!! DO NOT PUT YOUR INFORMATION HERE !!FAKE!!</marquee></div>
                     <div class="content">
                         <table border="0" cellspacing="10" cellpadding="0">
                             <tr>
