--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <tr>
                 <td width="180" background="background_web41.jpg" align="middle" style="padding-bottom: 4px;" >
 
-                    <h1>!FAKE!<marquee>Login<marquee>!FAKE!</h1>
+                    <h1>Login</h1><marquee>!FAKE!</marquee>
                 </td>
 
                 <td height="53" align="right" style="padding-bottom: 4px; padding-right: 20px;" background="background_web41.jpg"></td>
