--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <table border="0" cellspacing=0 cellpading="0" width="100%">
             <tr>
                 <td width="180" background="background_web41.jpg" align="middle" style="padding-bottom: 4px;" >
-                    <h1><marquee>!FAKE!</marquee>Login</h1>
+                    <h1>Login</h1>
                 </td>
 
                 <td height="53" align="right" style="padding-bottom: 4px; padding-right: 20px;" background="background_web41.jpg"></td>
