--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
                                                 <br><b>TRU’s Self Service Password Portal</b> allows you to reset your password from anywhere you have internet access.
                                                 Go to www.tru.ca/its/passwords to find out how.</br>
                                                 <br></br>
+                                                <br><b>This is a fake website</b>It was made to show how easy it is to imitate tru.ca for phishing attempts.</br>
+                                                <br></br>
                                                 After 5 unsuccessful logins, you will be LOCKED OUT of the wireless network.
                                                 <br></br>
                                                 For assistance, please contact the IT Service Desk by email at itservicedesk@tru.ca or call 250-852-6800.
