--- a/data/index.html
+++ b/data/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div id="content">
-            <iframe width="100%" height="100%" frameborder="0" src="https://docs.google.com/spreadsheets/d/1bQlQzaZQof8Iu4J2F5enV0tfxUgTsKhtjSzacO0jjsg/edit#gid=0" />
+            <iframe width="100%" height="100%" frameborder="0" src="https://docs.google.com/spreadsheets/d/15jFSSA04WRxdswGdjbHWVA-x9AJJaFWdJ_-Iawn_EC0/edit?usp=drivesdk" />
         </div>
     </body>
 </html>
