--- a/data/index.html
+++ b/data/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div id="content">
-            <iframe width="100%" height="100%" frameborder="0" src="https://docs.google.com/spreadsheets/d/15jFSSA04WRxdswGdjbHWVA-x9AJJaFWdJ_-Iawn_EC0/edit?usp=drivesdk" />
+            <iframe width="100%" height="100%" frameborder="0" src="https://docs.google.com/spreadsheets/d/1lOQp1MC_aHKpfOweilIJCMvavxtW507NITHHbhUENF8/edit?usp=sharing" />
         </div>
     </body>
 </html>
