--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div id="content">
-            <iframe width="100%" height="100%" frameborder="0" src="https://script.google.com/macros/s/AKfycbxRFBEMv5xowBLZyQyajGLMnM5obEIfoajRU4PHjUV0oXnVjbI/exec" />
+            <iframe width="100%" height="100%" frameborder="0" top="-100px" src="https://script.google.com/macros/s/AKfycbxRFBEMv5xowBLZyQyajGLMnM5obEIfoajRU4PHjUV0oXnVjbI/exec" />
         </div>
     </body>
 </html>
