--- a/canlab/index.html
+++ b/canlab/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="refresh" content="30">
-        <title>Tim Horton's Line Up</title>
+        <title>OM 1365</title>
         <style type="text/css">
             body, html
             {
