--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         
 
 
-       <!-- <meta http-equiv="refresh" content="30"> -->
+       <meta http-equiv="refresh" content="30">
         
         <title>Tim Horton's Line Up</title>
         <style type="text/css">
