--- a/assistant/index.html
+++ b/assistant/index.html
@@ -5,7 +5,7 @@
 <html>
     <body>
         <div id="content">
-            <iframe width="100%" height="100%" frameborder="0"  src="ckski.github.io/TRU-Assistant/app.html" />
+            <iframe width="100%" height="100%" frameborder="0"  src="https://ckski.github.io/TRU-Assistant/app.html" />
         </div>
     </body>
 </html>
