--- a/assistant/index.html
+++ b/assistant/index.html
@@ -1,8 +1,8 @@
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
 <title>TRU Assistant</title>
 </head>
-<html>
     <body>
         <div id="content">
             <iframe width="100%" height="100%" frameborder="0"  src="https://ckski.github.io/TRU-Assistant/app.html" />
