--- a/assistant/presentation/index.html
+++ b/assistant/presentation/index.html
@@ -1,13 +1,5 @@
 
-
-<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-
-<title>TRU Assistant</title>
+<meta http-equiv="refresh" content="0; url="https://docs.google.com/presentation/d/1yU3o6xz8ye3WHSgu-TBJPUSRqbcTCPBjXffhWXE5INU/edit?usp=sharing" />
 </head>
-    <body>
-        <div id="content">
-            <iframe width="100%" height="100%" frameborder="0"  src="https://docs.google.com/presentation/d/1yU3o6xz8ye3WHSgu-TBJPUSRqbcTCPBjXffhWXE5INU/edit?usp=sharing" />
-        </div>
-    </body>
-</html>
+ 
