--- a/assistant/presentation/index.html
+++ b/assistant/presentation/index.html
@@ -1,5 +1,16 @@
 
-<head>
-<meta http-equiv="refresh" content="0; url="https://docs.google.com/presentation/d/1yU3o6xz8ye3WHSgu-TBJPUSRqbcTCPBjXffhWXE5INU/edit?usp=sharing" />
-</head>
- 
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1; url=https://docs.google.com/presentation/d/1yU3o6xz8ye3WHSgu-TBJPUSRqbcTCPBjXffhWXE5INU/edit?usp=sharing">
+        <script type="text/javascript">
+            window.location.href = "http://example.com"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='http://example.com'>link to example</a>.
+    </body>
+</html>
