--- a/assistant/presentation/index.html
+++ b/assistant/presentation/index.html
@@ -11,6 +11,6 @@
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='https://docs.google.com/presentation/d/1yU3o6xz8ye3WHSgu-TBJPUSRqbcTCPBjXffhWXE5INU/edit?usp=sharing'>link to example</a>.
+        If you are not redirected automatically, follow this <a href='https://docs.google.com/presentation/d/1yU3o6xz8ye3WHSgu-TBJPUSRqbcTCPBjXffhWXE5INU/edit?usp=sharing'></a>.
     </body>
 </html>
