--- a/assistant/index.html
+++ b/assistant/index.html
@@ -1,11 +1,15 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-
-<title>TRU Assistant</title>
-</head>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1; url=https://ckski.github.io/TRU-Assistant/app.html">
+        <script type="text/javascript">
+            window.location.href = "https://ckski.github.io/TRU-Assistant/app.html"
+        </script>
+        <title>Page Redirection</title>
+    </head>
     <body>
-        <div id="content">
-            <iframe width="100%" height="100%" frameborder="0"  src="https://ckski.github.io/TRU-Assistant/app.html" />
-        </div>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='https://ckski.github.io/TRU-Assistant/app.html'></a>.
     </body>
 </html>
