--- a/survey/index.html
+++ b/survey/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="7; url=https://forms.gle/DJ6SL9x6C4YRXkQp6" />
+    <meta http-equiv="Refresh" content="2 url=https://forms.gle/DJ6SL9x6C4YRXkQp6" />
   </head>
   <body>
     <p>Please follow <a href="https://forms.gle/DJ6SL9x6C4YRXkQp6">this link</a>.</p>
